--- a/sass/layout/_modal-window.scss
+++ b/sass/layout/_modal-window.scss
@@ -26,7 +26,7 @@
   left: 50%;
   transform: translate(-50%);
 
-  max-width: 450px;
+  max-width: 528px;
   height: 609px;
 
   padding: 40px;
